# Cafe_OMS_FastAPI_v3_ai_qwen

./: .dockerignore  .env.example  .gitignore  Dockerfile  QWEN.md  README.md  cafe.db-shm  cafe.db-wal  create_superuser.py  create_test_data.py  docker-compose.yml  index.js  init.bat  init.sh  nginx.conf  package-lock.json  package.json  project_assignment.md  pyproject.toml  pytest_output.txt  requirements.txt  start.bat  start.sh
.qwen/: settings.json
.qwen/agents/: code-generator.md  code-reviewer.md  test-generator.md  ui-designer.md  ui-functional-tester.md
.qwen/design-lab/: .gemini-extension-install.json  GEMINI.md  README.md  gemini-extension.json
app/: config.py  database.py  main.py  seed.py
app/core/: __init__.py  exceptions.py  security.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
reports/: api-tests-report.md  backend-working.md  code-review.md  design-review.md  frontend-api-integration.md  integration-plan.md  phase-1-final.md  phase-1.1-design.md  phase-2-4-backend.md  project-status.md  test-report.md  test-status.md
tasks/: phase-1.1-design.md  phase-1.2-design-lab.md  phase-1.3-ui-agent.md  phase-10-docker.md  phase-2.1-init.md  phase-2.2-database.md  phase-2.3-fastapi.md  phase-8-integration.md  phase-9-testing.md
tests/: conftest.py  test_all_endpoints_api.py  test_all_endpoints_web.py  test_api_endpoints.py  test_auth.py  test_crud_orders.py  test_crud_users.py  test_orders.py  test_orders_many_to_many.py  test_ui_functional.py  test_users.py  test_web_ui.py
(+45 files in other folders)
